# src/symtab/CMakeLists.txt

cmake_minimum_required(VERSION 3.27)
project(symtab LANGUAGES C)

#add_library(symtab ${CMAKE_CURRENT_SOURCE_DIR}/src/symtab.c)
#target_include_directories(symtab PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
#target_link_libraries(symtab PUBLIC data_structure)
#target_compile_definitions(symtab PRIVATE $<$<CONFIG:Debug>:DEBUG>)
#
#if (BUILD_TESTING)
#    include(${CMAKE_CURRENT_SOURCE_DIR}/tests/tests.cmake)
#endif ()
